--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@
 
 # production
 /build
+db.json
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
@@ -21,3 +23,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
+
+db.json
+useInput.jsx
+.env
