--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "browser-image-compression": "^2.0.0",
     "buffer": "^6.0.3",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "global": "^4.4.0",
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -21,7 +20,7 @@
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
