--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
+    "swiper": "^8.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
