--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-aws-s3": "^1.5.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.20.1",
